# vl_mamba

./: README.md  pyproject.toml
configs/trainer/: zero2.json  zero2_mamba.json  zero3_offload.json
scripts/: download_grit.sh  evaluate_on_all.sh  filter_out_ocrvqa_images.py  finetune_mamba.sh  finetune_pythia.sh  prepare_dataset.py  prepare_grit_dataset.py  pretrain_mamba.sh  pretrain_pythia.sh
src/vl_mamba/: __init__.py  train_hf.py
src/vl_mamba/datamodels/: dataclasses.py  datamodels.py
src/vl_mamba/datamodules/: fake_datamodule.py  fake_dataset.py
src/vl_mamba/datasets/: base_dataset.py  collate.py  fake_dataset.py  instruction_tuning_dataset.py  pretrain_dataset.py
src/vl_mamba/datasets/vl_mamba/: ai2d_loader.py  aok_vqa_loader.py  base_loader.py  coco_loader.py  data_paths.py  docvqa_loader.py  gqa_loader.py  grit_loader.py  infographicvqa_loader.py  llava_instruct_loader.py  llava_pretrain.py  localized_narratives_loader.py  nocaps_loader.py  ocr_vqa_loader.py  pope_loader.py  refcoco_loader.py  synthetic_vg_loader.py  text_caps_loader.py  text_vqa_loader.py  visual7w_loader.py  visual_genome_loader.py  vizwiz_vqa_loader.py  vl_mamba.py  vqa_v2_loader.py  vsr_loader.py
src/vl_mamba/evaluation/: base_evaluator.py  evaluate_ai2d.py  evaluate_coco_captioning.py  evaluate_gqa.py  evaluate_nocaps.py  evaluate_pope.py  evaluate_refcoco.py  evaluate_textcaps.py  evaluate_textvqa.py  evaluate_visual7w.py  evaluate_vqav2.py  evaluate_vsr.py  evaluation_args.py
src/vl_mamba/models/: boring_model.py  gated_xattn.py  modeling_mamba.py  modeling_pythia.py  modeling_vlmamba.py  modeling_vlmambaclip.py  modeling_vlmambaclip_xattn.py  modeling_vlpythia.py  modeling_vlpythiaclip.py  vision_encoder.py
src/vl_mamba/trainer/: __init__.py  synthetic_trainer.py  trainer.py
src/vl_mamba/utils/: __init__.py  boxes.py  compute_loss.py  conversation_processor.py  count_model_parameters.py  generation.py  hugginface.py  image_preprocessor.py  io.py  plot_bb.py
src/vl_mamba/utils/logger/: __init__.py
